Fix overflow in the footer for small screen

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -79,6 +79,12 @@ section.panel {
     .panel-footer {
         .copyright {
             padding: 10px 0;
+            font-size: .75em;
+            line-height: 19px;
+        }
+
+        .sitemap {
+            float: right;
         }
 
         .copyright, .nav {
